# CodeRaytracer

./: .gitignore  CMakeLists.txt  README.md
App/Source/: App.cpp
Core/: imgui.ini
Core/Source/: Build-Core.lua  CMakeLists.txt  VulkanApp.cpp  VulkanApp.h
Core/Source/Core/: Core.cpp  Core.h
Core/Source/FileSystem/: FileHandler.cpp  FileHandler.h
Core/Source/Libraries/VulkanInclude/Lib/cmake/glslang/: glslang-targets-debug.cmake
Core/Source/Libraries/VulkanInclude/cmake/: SDL2ConfigVersion.cmake
Core/Source/Libraries/imgui-docking/: imgui_demo.cpp  imgui_impl_vulkan.cpp  imgui_tables.cpp
Core/Source/Resources/Assets/Models/GLTF_SAMPLES/3d_pbr_curved_sofa/: license.txt  scene.gltf
Core/Source/Resources/Assets/Models/GLTF_SAMPLES/modern_dining_room/: scene.gltf
Core/Source/Resources/Assets/Models/House/: House.mtl
Core/Source/Resources/Assets/Models/Robot/: Robots.mtl
Core/Source/Shaders/: base_shader.frag  base_shader.frag.spv  base_shader.vert  base_shader.vert.spv
Core/Source/Shaders/ComputeShaders/: compute.comp  compute.comp.spv
Core/Source/Shaders/Imgui/: imgui_shader.frag
Core/Source/Shaders/OutputShader/: outputshader.frag  outputshader.frag.spv  outputshader.vert
Core/Source/Shaders/PostPro/: DownSample.frag  DownSample.frag.spv  UpSample.frag  UpSample.frag.spv  postpro.frag  postpro.frag.spv  postpro.vert.spv
Core/Source/Shaders/RayTracingShaders/: anyhit.rahit  anyhit.rahit.spv  closesthit.rchit  closesthit.rchit.spv  miss.rmiss  miss.rmiss.spv  raygen.rgen  raygen.rgen.spv  shadow.rmiss  shadow.rmiss.spv  spherehit.rchit  spherehit.rchit.spv  sphereint.rint  sphereint.rint.spv
Core/Source/Shaders/UtilsShaders/: DisneyShadingModel.glsl  Functions.glsl  PersonalDisney.glsl  Random.glsl  ShadersUtility.glsl  Shading.glsl
Core/Source/VulkanAPI/: BuildData.bat  VulkanInit.cpp  VulkanInit.h  compile.bat
Core/Source/VulkanAPI/Camera/: Camera.cpp  Camera.h
Core/Source/VulkanAPI/DescriptorSetHandler/: MyDescriptorSets.cpp  MyDescriptorSets.h
Core/Source/VulkanAPI/DevicePipeline/: Vulkan_Device.cpp  Vulkan_Device.h
Core/Source/VulkanAPI/Headers/: HeadersFiles.h
Core/Source/VulkanAPI/Model/: ModelHandler.cpp  ModelHandler.h  MyModel.cpp  MyModel.h
Core/Source/VulkanAPI/ObjectLoader/: ModelLoaderHandler.cpp  ModelLoaderHandler.h
Core/Source/VulkanAPI/RenderSystems/: Bloom_RS.cpp  Bloom_RS.h  Forward_RS.cpp  Forward_RS.h  ImguiRenderSystem.cpp  ImguiRenderSystem.h  PostProcessing_RS.cpp  PostProcessing_RS.h  RayTracing_RS.cpp  RayTracing_RS.h
Core/Source/VulkanAPI/Renderer/: VulkanRenderer.cpp  VulkanRenderer.h
Core/Source/VulkanAPI/ResourcesManagers/Assets/: AssetThreat.cpp  AssetThreat.h  AssetsHandler.cpp  AssetsHandler.h
Core/Source/VulkanAPI/ResourcesManagers/UI/: ResourcesUIHandler.cpp  ResourcesUIHandler.h
Core/Source/VulkanAPI/SwapChain/: VulkanSwap_chain.cpp  VulkanSwap_chain.hpp
Core/Source/VulkanAPI/Utility/: ComputeShadersUtils.h  Globals.h  ISerializable.h  Utility.cpp  Utility.h
Core/Source/VulkanAPI/Utility/InputSystem/: InputHandler.cpp  InputHandler.h
Core/Source/VulkanAPI/VulkanInit/: VulkanInit.cpp  VulkanInit.h
Core/Source/VulkanAPI/VulkanObjects/Buffers/: Buffer.cpp  Buffer.h  VKBufferHandler.cpp  VKBufferHandler.h
Core/Source/VulkanAPI/VulkanObjects/IndexBuffers/: VKIndexBuffer.cpp  VKIndexBuffer.h
Core/Source/VulkanAPI/VulkanObjects/Materials/: Material.cpp  Material.h
Core/Source/VulkanAPI/VulkanObjects/ResourceInterface/: IResource.cpp  IResource.h
Core/Source/VulkanAPI/VulkanObjects/Textures/: VKTexture.cpp  VKTexture.h
Core/Source/VulkanAPI/VulkanPipeline/: PipelineReader.cpp  PipelineReader.h
Editor/: imgui.ini
Editor/Source/: Editor.cpp
Editor/Source/Imgui/: ImguiSetup.cpp  ImguiSetup.h
Editor/Source/Libraries/imgui-docking/: imgui_impl_vulkan.cpp
Editor/x64/Debug/: Editor.exe.recipe  vc143.idb
Editor/x64/Debug/Editor.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Editor.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Editor/x64/Release/: Editor.exe.recipe  Editor.iobj  Editor.ipdb
Editor/x64/Release/Editor.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Editor.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
VStudio_Build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Editor.sln  Editor.vcxproj  Editor.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
VStudio_Build/Core/Source/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Core.sln  Core.vcxproj  Core.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
VStudio_Build/Core/Source/Libraries/glm/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
VStudio_Build/Core/Source/Libraries/tinygltf-release/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  loader_example.vcxproj  loader_example.vcxproj.filters  tinygltf.sln  tinygltf.vcxproj  tinygltf.vcxproj.filters
VStudio_Build/Core/Source/Libraries/tinyobjloader-release/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  tinyobjloader-config-version.cmake  tinyobjloader-config.cmake  tinyobjloader-targets.cmake  tinyobjloader.pc  tinyobjloader.sln  tinyobjloader.vcxproj  tinyobjloader.vcxproj.filters  uninstall.vcxproj  uninstall.vcxproj.filters
x64/Debug/: Editor - Shortcut.lnk
